# Spolks3_OLD

./: CMakeLists.txt  Makefile  functions.cpp  functions.h  mA  main.cpp  matrix.cpp  matrix.h  mympi.cpp  mympi.h
